Styled the navbar, linked the script.js

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Official Website for ENTABA</title>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js" defer></script>
     </head>
     <body>
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="/" id="navbar__logo">NEXT</a>
+                <a href="/" id="navbar__logo">ENTABA</a>
                 <div class="navbar__toggle" id="mobile-menu">
                     <span class="bar"></span>
                     <span class="bar"></span> 
@@ -26,11 +25,11 @@
                     <li class="navbar__item">
                         <a href="/" class="navbar__links">Products</a>
                     </li>
-                    <li class="navbar__btn">
-                        <a href="/" class="button">Sign Up</a>
-                    </li>
+                    <li class="navbar__btn"><a href="/"
+                    class="button">Sign Up</a></li>
                 </ul>
             </div>
         </nav>
+        <script src="script.js"></script>
     </body>
 </html>
