Added Hero section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!-- NAVBAR SECTION -->
         <nav class="navbar">
             <div class="navbar__container">
                 <a href="/" id="navbar__logo">ENTABA</a>
@@ -30,6 +31,22 @@
                 </ul>
             </div>
         </nav>
+
+        <!-- HERO SECTION -->
+        <div class="main">
+            <div class="main__container">
+                <div class="main__content">
+                    <h1>ENTABAS GOALS</h1>
+                    <h2>TECHNOLOGY</h2>
+                    <p>See what makes us different</p>
+                    <button class="main__btn"><a href="/">Get Started</a></button>
+                </div>
+                <div class=".main__img--container">
+                    <img src="/" alt="pic"  id="main__img">
+                </div>    
+            </div>  
+        </div>
+
         <script src="script.js"></script>
     </body>
 </html>
